--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -13,7 +13,7 @@
       <label class="form-text">ニックネーム</label>
       <span class="indispensable">必須</span>
     </div>
-    <%= f.text_area :nickname, class:"input-default", id:"nickname", placeholder:"例) furima太郎", maxlength:"40", autofocus: true  %>
+    <%= f.text_area :nickname, class:"input-default", id:"nickname", placeholder:"例) シューフィットたろう", maxlength:"40", autofocus: true  %>
   </div>
   <div class="form-group">
     <div class='form-text-wrap'>
@@ -51,20 +51,22 @@
       <span class="indispensable">必須</span>
     </div>
     <div class='input-name-wrap'>
-      <%= f.text_area :last_name, class:"input-name", id:"last-name", placeholder:"例) 山田" %>
-      <%= f.text_area :first_name, class:"input-name", id:"first-name", placeholder:"例) 陸太郎" %>
+      <%= f.text_area :name, class:"input-name", id:"name", placeholder:"例) 山田太郎" %>
     </div>
   </div>
   <div class="form-group">
     <div class='form-text-wrap'>
-      <label class="form-text">お名前カナ(全角)</label>
+      <label class="form-text">住所</label>
       <span class="indispensable">必須</span>
     </div>
-    <div class='input-name-wrap'>
-      <%= f.text_area :last_name_kana, class:"input-name", id:"last-name-kana", placeholder:"例) ヤマダ" %>
-      <%= f.text_area :first_name_kana, class:"input-name", id:"first-name-kana", placeholder:"例) リクタロウ" %>
+    <%= f.text_field :address, class:"input-default", id:"address", placeholder:"例）東京都渋谷区ビル1-2-3"%>
+  </div>
+  <div class="form-group">
+    <div class='form-text-wrap'>
+      <label class="form-text">電話番号</label>
+      <span class="indispensable">必須</span>
     </div>
-    <p class='info-text'>※ 本人情報は正しく入力してください。会員登録後、修正するにはお時間を頂く場合があります。</p>
+    <%= f.text_field :phone_number, class:"input-default", id:"phone-number", placeholder:"例）09012345678",maxlength:"11"%>
   </div>
   <div class="form-group">
     <h2 class='form-bottom-text'>
