ユーザー情報の編集機能を実装

--- a/app/assets/stylesheets/customers/index.css
+++ b/app/assets/stylesheets/customers/index.css
@@ -92,6 +92,10 @@ a {
   line-height: 60px;
   background-color: #9c8678;
   color: #fff;
+  border-radius: 50%; 
+  border: 1px dashed #fff;
+  box-sizing: border-box;
+  box-shadow: 0 0 0 8px #9c8678;
 }
 
 .howtouse-list-text {
