--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -10,7 +10,7 @@
       SHOEFIT-PROは計測結果を瞬時に計算できる
     </p>
     <p class='service-explain'>
-      足計測アプリです
+      プロのための足計測アプリです
     </p>
   </div>
   <%# //画面上部の「プロのための足計測アプリ」帯部分  %>
