--- a/app/views/shared/_header_logged_in.html.erb
+++ b/app/views/shared/_header_logged_in.html.erb
@@ -13,7 +13,7 @@
       <% if user_signed_in? %>
       <li><%= link_to current_user.nickname, "#", class: "user-nickname" %></li>
       <li><%= link_to '顧客リスト', "#", class: "customers-list" %></li>
-      <li><%= link_to 'ユーザー管理', "#", class: "user-information" %></li>
+      <li><%= link_to 'ユーザー管理', edit_user_path(current_user), class: "user-information" %></li>
       <li><%= link_to 'ログアウト', destroy_user_session_path, method: :delete, data: {turbo_method: :delete}, class: "logout" %></li>
       <% else %>
       <li><%= link_to 'ログイン', new_user_session_path, class: "login" %></li>
