--- a/app/views/customers/index_logged_in.html.erb
+++ b/app/views/customers/index_logged_in.html.erb
@@ -1,32 +1,109 @@
 <%= render "shared/header_logged_in" %>
 <div class='main'>
 
-  <%# 画面上部の「プロのための足計測アプリ」帯部分 %>
+  <%# 画面上部の「理想の靴サイズを計算しよう」帯部分 %>
   <div class='title-contents'>
-    <h2 class='service-title'>
-      For the professional shoe fitting...
+    <h2 class='calculate-shoesize-title'>
+      理想の靴サイズを計算しよう
     </h2>
-    <p class='service-explain'>
-      SHOEFIT-PROは計測結果を瞬時に計算できる
-    </p>
-    <p class='service-explain'>
-      足計測アプリです
-    </p>
   </div>
-  <%# //画面上部の「プロのための足計測アプリ」帯部分  %>
+  <%# //画面上部の「理想の靴サイズを計算しよう」帯部分  %>
 
   <%# 理想の靴サイズを計測しよう部分 %>
-  <div class='measuredsize-contents'>
-    <h2 class='title'>
-      理想の靴サイズを計測しよう
-    </h2>
-    <ul class='measuredsize'>
-      <%= image_tag "measuredsize-sample.png", class:"measuredsize-sample-pict" %>
-    </ul>
-    <div class='measuredsize-btn'>
-      <button class="measuredsize-red-btn">理想靴サイズの目安を出す</button>
+  <%= form_tag calculate_foot_length_path, method: :post,local: true, data: { turbo: false } do %>
+    <div class='measuredsize-contents'>
+      <h2 class='explain-title'>
+        以下の表に足計測の数値を記入してください。
+      </h2>
+      <ul class='measuredsize'>
+        <table>
+          <tr>
+            <th></th>
+            <th colspan="2">右</th>
+            <th colspan="2">左</th>
+          </tr>
+          <tr>
+            <th>足長[mm]</th>
+            <td colspan="2"><input type="number" name="foot_length_right" placeholder="235"></td>
+            <td colspan="2"><input type="number" name="foot_length_left" placeholder="235"></td>
+          </tr>
+          <tr>
+            <th>足幅（荷重位）[mm]</th>
+            <td><input type="number" name="foot_width_load_right" placeholder="235"></td>
+            <td></td>
+            <td><input type="number" name="foot_width_load_left" placeholder="235"></td>
+            <td></td>
+          </tr>
+          <tr>
+            <th>足囲（荷重位）[mm]</th>
+            <td><input type="number" name="foot_girth_load_right" placeholder="235"></td>
+            <td></td>
+            <td><input type="number" name="foot_girth_load_left" placeholder="235"></td>
+            <td></td>
+          </tr>
+          <tr>
+            <th>足幅（非荷重位）[mm]</th>
+            <td><input type="number" name="foot_width_nonload_right" placeholder="235"></td>
+            <td></td>
+            <td><input type="number" name="foot_width_nonload_left" placeholder="235"></td>
+            <td></td>
+          </tr>
+          <tr>
+            <th>足囲（非荷重位）[mm]</th>
+            <td><input type="number" name="foot_girth_nonload_right" placeholder="235"></td>
+            <td></td>
+            <td><input type="number" name="foot_girth_nonload_left" placeholder="235"></td>
+           <td></td>
+          </tr>
+          <tr>
+            <th>爪先形状</th>
+            <td colspan="2">
+              <label>
+                <input type="checkbox" name="toe_shape" value="オーバル">オーバル
+              </label>
+              <label>
+                <input type="checkbox" name="toe_shape" value="ラウンド">ラウンド
+              </label>
+              <label>
+                <input type="checkbox" name="toe_shape" value="スクエア">スクエア
+              </label>
+            </td>
+            <td colspan="2">
+              <label>
+                <input type="checkbox" name="toe_shape" value="オーバル">オーバル
+              </label>
+              <label>
+                <input type="checkbox" name="toe_shape" value="ラウンド">ラウンド
+              </label>
+              <label>
+                <input type="checkbox" name="toe_shape" value="スクエア">スクエア
+              </label>
+            </td>
+          </tr>
+          <tr>
+            <th>性別</th>
+            <td colspan="4">
+              <label>
+                <input type="checkbox" name="gender" value="女性">女性
+              </label>
+              <label>
+                <input type="checkbox" name="gender" value="男性">男性
+              </label>
+              <label>
+                <input type="checkbox" name="gender" value="子供（小学生以下）">子供（小学生以下）
+              </label>
+            </td>
+          </tr>
+        </table>
+      </ul>
+      <div class='measuredsize-btn'>
+        <%= submit_tag "理想靴サイズの目安を出す", class: "measuredsize-red-btn" %>
+      </div>
+      <!-- 目安の靴サイズを表示する領域 -->
+      <h1>計算結果</h1>
+      <p>あなたの足長は '<%= @calculated_length %>' です。</p>
     </div>
-  </div>
+  <% end %>
   <%# //理想の靴サイズを計測しよう部分 %>
 
 <%= render "shared/footer" %>
