--- a/app/views/customers/index_logged_in.html.erb
+++ b/app/views/customers/index_logged_in.html.erb
@@ -10,7 +10,7 @@
   <%# //画面上部の「理想の靴サイズを計算しよう」帯部分  %>
 
   <%# 理想の靴サイズを計測しよう部分 %>
-  <%= form_tag calculate_foot_length_path, method: :post,local: true, data: { turbo: false } do %>
+  <%= form_tag calculate_shoe_size_path, method: :post,local: true, data: { turbo: false } do %>
     <div class='measuredsize-contents'>
       <h2 class='explain-title'>
         以下の表に足計測の数値を記入してください。
@@ -24,36 +24,28 @@
           </tr>
           <tr>
             <th>足長[mm]</th>
-            <td colspan="2"><input type="number" name="foot_length_right" placeholder="235" ></td>
-            <td colspan="2"><input type="number" name="foot_length_left" placeholder="235" ></td>
+            <td colspan="2"><input type="number" name="foot_length_right" placeholder="半角mmで記載" ></td>
+            <td colspan="2"><input type="number" name="foot_length_left" placeholder="半角mmで記載" ></td>
           </tr>
           <tr>
             <th>足幅（荷重位）[mm]</th>
-            <td><input type="number" name="foot_width_load_right" placeholder="235" ></td>
-            <td></td>
-            <td><input type="number" name="foot_width_load_left" placeholder="235" ></td>
-            <td></td>
+            <td colspan="2"><input type="number" name="foot_width_load_right" placeholder="半角mmで記載" ></td>
+            <td colspan="2"><input type="number" name="foot_width_load_left" placeholder="半角mmで記載" ></td>
           </tr>
           <tr>
             <th>足囲（荷重位）[mm]</th>
-            <td><input type="number" name="foot_girth_load_right" placeholder="235" ></td>
-            <td></td>
-            <td><input type="number" name="foot_girth_load_left" placeholder="235" ></td>
-            <td></td>
+            <td colspan="2"><input type="number" name="foot_girth_load_right" placeholder="半角mmで記載" ></td>
+            <td colspan="2"><input type="number" name="foot_girth_load_left" placeholder="半角mmで記載" ></td>
           </tr>
           <tr>
             <th>足幅（非荷重位）[mm]</th>
-            <td><input type="number" name="foot_width_nonload_right" placeholder="235" ></td>
-            <td></td>
-            <td><input type="number" name="foot_width_nonload_left" placeholder="235" ></td>
-            <td></td>
+            <td colspan="2"><input type="number" name="foot_width_nonload_right" placeholder="半角mmで記載" ></td>
+            <td colspan="2"><input type="number" name="foot_width_nonload_left" placeholder="半角mmで記載" ></td>
           </tr>
           <tr>
             <th>足囲（非荷重位）[mm]</th>
-            <td><input type="number" name="foot_girth_nonload_right" placeholder="235" ></td>
-            <td></td>
-            <td><input type="number" name="foot_girth_nonload_left" placeholder="235" ></td>
-           <td></td>
+            <td colspan="2"><input type="number" name="foot_girth_nonload_right" placeholder="半角mmで記載" ></td>
+            <td colspan="2"><input type="number" name="foot_girth_nonload_left" placeholder="半角mmで記載" ></td>
           </tr>
           <tr>
             <th>爪先形状</th>
@@ -84,13 +76,13 @@
             <th>性別</th>
             <td colspan="4">
               <label>
-                <input type="checkbox" name="gender" value="女性">女性
+                <input type="radio" name="gender" value="女性">女性
               </label>
               <label>
-                <input type="checkbox" name="gender" value="男性">男性
+                <input type="radio" name="gender" value="男性">男性
               </label>
               <label>
-                <input type="checkbox" name="gender" value="子供（小学生以下）">子供（小学生以下）
+                <input type="radio" name="gender" value="子供（小学生以下）">子供（小学生以下）
               </label>
             </td>
           </tr>
@@ -99,9 +91,6 @@
       <div class='measuredsize-btn'>
         <%= submit_tag "理想靴サイズの目安を出す", class: "measuredsize-red-btn" %>
       </div>
-      <!-- 目安の靴サイズを表示する領域 -->
-      <h1>計算結果</h1>
-      <p>あなたの足長は <%= @calculated_length %> です。</p>
     </div>
   <% end %>
   <%# //理想の靴サイズを計測しよう部分 %>
