--- a/app/views/result/shoe_size_result.html.erb
+++ b/app/views/result/shoe_size_result.html.erb
@@ -99,9 +99,9 @@
       <!-- 目安の靴サイズを表示する領域 -->
       <h1>計算結果</h1>
       <p>理想的な足長は <%= @calculated_length %> です。</p>
-      <div class='save-shoesize-btn'>
+      <%#<div class='save-shoesize-btn'>
         <%= submit_tag "保存する", class: "save-shoesize-red-btn" %>
-      </div>
+      <%#</div>
     </div>
   <%# end %>
   <%# //計算結果の表部分 %>
