--- a/app/views/customers/index_logged_in.html.erb
+++ b/app/views/customers/index_logged_in.html.erb
@@ -76,13 +76,13 @@
             <th>性別</th>
             <td colspan="4">
               <label>
-                <input type="radio" name="gender" value="女性">女性
+                <input type="radio" name="gender" value="female">女性
               </label>
               <label>
-                <input type="radio" name="gender" value="男性">男性
+                <input type="radio" name="gender" value="male">男性
               </label>
               <label>
-                <input type="radio" name="gender" value="子供（小学生以下）">子供（小学生以下）
+                <input type="radio" name="gender" value="children">子供（小学生以下）
               </label>
             </td>
           </tr>
