--- a/app/views/result/shoe_size_result.html.erb
+++ b/app/views/result/shoe_size_result.html.erb
@@ -84,13 +84,13 @@
             <th>性別</th>
             <td colspan="4">
               <label>
-                <input type="radio" name="gender" value="女性" <%= @input_values[:gender] == "女性" ? "checked" : "" %>>女性
+                <input type="radio" name="gender" value="female" <%= @input_values[:gender] == "female" ? "checked" : "" %>>女性
               </label>
               <label>
-                <input type="radio" name="gender" value="男性" <%= @input_values[:gender] == "男性" ? "checked" : "" %>>男性
+                <input type="radio" name="gender" value="male" <%= @input_values[:gender] == "male" ? "checked" : "" %>>男性
               </label>
               <label>
-                <input type="radio" name="gender" value="子供（12歳以下）" <%= @input_values[:gender] == "子供（12歳以下）" ? "checked" : "" %>>子供（12歳以下）
+                <input type="radio" name="gender" value="children" <%= @input_values[:gender] == "children" ? "checked" : "" %>>子供（12歳以下）
               </label>
             </td>
           </tr>
