--- a/app/views/result/shoe_size_result.html.erb
+++ b/app/views/result/shoe_size_result.html.erb
@@ -10,7 +10,7 @@
   <%# //画面上部の「計算結果」帯部分  %>
 
   <%# 計算結果の表部分 %>
-  <%#= form_tag 計算結果保存先のpath, method: :post,local: true, data: { turbo: false } do %>
+  <%= form_tag '計算結果保存先のpath', method: :post,local: true, data: { turbo: false } do %>
     <div class='shoesize-result-contents'>
       <h2 class='explain-shoesize-result-title'>
         以下の表に足計測の数値を記入してください。
@@ -99,12 +99,12 @@
       <!-- 目安の靴サイズを表示する領域 -->
       <h1>計算結果</h1>
       <p>理想的な足長は <%= @calculated_length %> です。</p>
-      <%#<div class='save-shoesize-btn'>%>
-        <%#<%= submit_tag "保存する", class: "save-shoesize-red-btn" %>
-      <%#</div>%>
+      <div class='save-shoesize-btn'>
+        <%= submit_tag "保存する", class: "save-shoesize-red-btn" %>
+      </div>
     
     </div>
-  <%# end %>
+  <% end %>
   <%# //計算結果の表部分 %>
 
 <%= render "shared/footer" %>
