save_calculated_resultメソッドのコントローラーでの定義

--- a/app/views/result/shoe_size_result.html.erb
+++ b/app/views/result/shoe_size_result.html.erb
@@ -59,24 +59,24 @@
             <th>爪先形状</th>
             <td colspan="2">
               <label>
-                <input type="checkbox" name="toe_shape" value="オーバル" <%= @input_values[:toe_shape] == "オーバル" ? "checked" : "" %>>オーバル
+                <input type="checkbox" name="toe_shape_right" value="オーバル" <%= @input_values[:toe_shape_right] == "オーバル" ? "checked" : "" %>>オーバル
               </label>
               <label>
-                <input type="checkbox" name="toe_shape" value="ラウンド" <%= @input_values[:toe_shape] == "ラウンド" ? "checked" : "" %>>ラウンド
+                <input type="checkbox" name="toe_shape_right" value="ラウンド" <%= @input_values[:toe_shape_right] == "ラウンド" ? "checked" : "" %>>ラウンド
               </label>
               <label>
-                <input type="checkbox" name="toe_shape" value="スクエア" <%= @input_values[:toe_shape] == "スクエア" ? "checked" : "" %>>スクエア
+                <input type="checkbox" name="toe_shape_right" value="スクエア" <%= @input_values[:toe_shape_right] == "スクエア" ? "checked" : "" %>>スクエア
               </label>
             </td>
             <td colspan="2">
               <label>
-                <input type="checkbox" name="toe_shape" value="オーバル" <%= @input_values[:toe_shape] == "オーバル" ? "checked" : "" %>>オーバル
+                <input type="checkbox" name="toe_shape_left" value="オーバル" <%= @input_values[:toe_shape_left] == "オーバル" ? "checked" : "" %>>オーバル
               </label>
               <label>
-                <input type="checkbox" name="toe_shape" value="ラウンド" <%= @input_values[:toe_shape] == "ラウンド" ? "checked" : "" %>>ラウンド
+                <input type="checkbox" name="toe_shape_left" value="ラウンド" <%= @input_values[:toe_shape_left] == "ラウンド" ? "checked" : "" %>>ラウンド
               </label>
               <label>
-                <input type="checkbox" name="toe_shape" value="スクエア" <%= @input_values[:toe_shape] == "スクエア" ? "checked" : "" %>>スクエア
+                <input type="checkbox" name="toe_shape_left" value="スクエア" <%= @input_values[:toe_shape_left] == "スクエア" ? "checked" : "" %>>スクエア
               </label>
             </td>
           </tr>
