足サイズ保存機能のルーティング、ビューの実装

--- a/app/views/customers/index_logged_in.html.erb
+++ b/app/views/customers/index_logged_in.html.erb
@@ -51,24 +51,24 @@
             <th>爪先形状</th>
             <td colspan="2">
               <label>
-                <input type="checkbox" name="toe_shape" value="オーバル">オーバル
+                <input type="checkbox" name="toe_shape_right" value="オーバル">オーバル
               </label>
               <label>
-                <input type="checkbox" name="toe_shape" value="ラウンド">ラウンド
+                <input type="checkbox" name="toe_shape_right" value="ラウンド">ラウンド
               </label>
               <label>
-                <input type="checkbox" name="toe_shape" value="スクエア">スクエア
+                <input type="checkbox" name="toe_shape_right" value="スクエア">スクエア
               </label>
             </td>
             <td colspan="2">
               <label>
-                <input type="checkbox" name="toe_shape" value="オーバル">オーバル
+                <input type="checkbox" name="toe_shape_left" value="オーバル">オーバル
               </label>
               <label>
-                <input type="checkbox" name="toe_shape" value="ラウンド">ラウンド
+                <input type="checkbox" name="toe_shape_left" value="ラウンド">ラウンド
               </label>
               <label>
-                <input type="checkbox" name="toe_shape" value="スクエア">スクエア
+                <input type="checkbox" name="toe_shape_left" value="スクエア">スクエア
               </label>
             </td>
           </tr>
