--- a/app/views/result/save_shoesize_result.html.erb
+++ b/app/views/result/save_shoesize_result.html.erb
@@ -13,6 +13,7 @@
   <%= form_tag 'save_calculated_result', method: :post,local: true, data: { turbo: false } do %>
     <div class='shoesize-result-contents'>
       <h2 class='explain-shoesize-result-title'>
+        以下の表に足計測の数値を記入してください。
       </h2>
       <ul class='shoesize-result'>
         <table>
