保存機能の実装

--- a/app/views/result/shoe_size_result.html.erb
+++ b/app/views/result/shoe_size_result.html.erb
@@ -97,7 +97,7 @@
       </ul>
       <!-- 目安の靴サイズを表示する領域 -->
       <h1>計算結果</h1>
-      <p>理想的な足長は <%= @calculated_length %> です。</p>
+      <p>理想的な足長の目安は <%= @calculated_length %> です。</p>
       <div class='save-shoesize-btn'>
         <%= submit_tag "保存する", class: "save-shoesize-red-btn" %>
       </div>   
