--- a/app/views/result/save_calculated_result.html.erb
+++ b/app/views/result/save_calculated_result.html.erb
@@ -1,21 +1,12 @@
 <%= render "shared/header_logged_in" %>
 <div class='main'>
 
-  <%# 画面上部の「計算結果」帯部分 %>
-  <div class='result-title-contents'>
-    <h2 class='shoesize-result-title'>
-      計算結果
-    </h2>
-  </div>
-  <%# //画面上部の「計算結果」帯部分  %>
-
   <%# 計算結果の表部分 %>
-  <%= form_tag 'save_calculated_result', method: :post,local: true, data: { turbo: false } do %>
-    <div class='shoesize-result-contents'>
-      <h2 class='explain-shoesize-result-title'>
-        以下の表に足計測の数値を記入してください。
+    <div class='save-calculated-result-contents'>
+      <h2 class='save-calculated-result-title'>
+       <%= l @foot_measured_date, format: :long %> 足サイズ計算結果
       </h2>
-      <ul class='shoesize-result'>
+      <ul class='calculated-result'>
         <table>
           <tr>
             <th></th>
@@ -98,12 +89,8 @@
       </ul>
       <!-- 目安の靴サイズを表示する領域 -->
       <h1>計算結果</h1>
-      <p>理想的な足長は <%= @calculated_length %> です。</p>
-      <div class='save-shoesize-btn'>
-        <%= submit_tag "保存する", class: "save-shoesize-red-btn" %>
-      </div>   
+      <p>理想的な足長の目安は <%= @calculated_length %> です。</p>
     </div>
-  <% end %>
   <%# //計算結果の表部分 %>
 
 <%= render "shared/footer" %>
