--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -46,7 +46,7 @@
         <span class='howtouse-list-number'>3</span>
         <h3 class='howtouse-list-text'>
           ボタンをクリック
-        </h3>
+        </h3>foot_girth_nonload_left
         <p class='howtouse-list-description'>
           瞬時に理想の靴サイズの目安がわかります
         </p>
